--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <a href="https://www.github.com/" target="_blank"><i class="fa fa-github"></i></a>
 
         </div>
-        <p>Made With <br><b>Deep & Bhikhabhai</b></p>
+        <p>Made By <br><b>Deep & Bhikhabhai</b></p>
     </section>
 
 
